--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -55,8 +56,17 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
 
-
-
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    implementation "androidx.compose.runtime:runtime:1.2.0-alpha08"
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.0-alpha08"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.2.0-alpha08"
+    //implementation "androidx.compose:compose-runtime:$compose_version"
+    //kapt "androidx.compose:compose-compiler:$compose_version"
+    //implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    def nav_version = "2.4.2"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
