--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,22 +53,23 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.activity:activity-compose:1.4.0'
 
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation "androidx.compose.runtime:runtime:1.2.0-alpha08"
     implementation "androidx.compose.runtime:runtime-livedata:1.2.0-alpha08"
     implementation "androidx.compose.runtime:runtime-rxjava2:1.2.0-alpha08"
-    //implementation "androidx.compose:compose-runtime:$compose_version"
-    //kapt "androidx.compose:compose-compiler:$compose_version"
-    //implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation "androidx.activity:activity-ktx:1.4.0"
     def nav_version = "2.4.2"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.18.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
